--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,16 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="hintStyle">
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="android:textColor">#808080</item>
+        <item name="fontFamily">sans-serif</item>
+    </style>
+
+    <style name="valueStyle">
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="fontFamily">sans-serif</item>
+    </style>
 </resources>
