change posts usecase implementation from rxjava to coroutine with flow

--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -24,5 +24,8 @@
             android:id="@+id/navigate_postsFragment_to_authorsFragment"
             app:destination="@id/authorsFragment"
             app:exitAnim="@anim/nav_default_exit_anim" />
+        <argument
+            android:name="authorData"
+            app:argType="com.assignment.domain.model.AuthorsDomainResponseItem" />
     </fragment>
 </navigation>
