--- a/app/src/main/res/layout/author_item.xml
+++ b/app/src/main/res/layout/author_item.xml
@@ -14,7 +14,7 @@
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_4sdp"
+        android:layout_margin="@dimen/_4sdp"
         app:cardCornerRadius="@dimen/_4sdp"
         card_view:cardUseCompatPadding="true">
 
@@ -29,65 +29,34 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/author_name_tv"
+                    style="@style/valueStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_4sdp"
-                    android:orientation="horizontal">
+                    android:drawablePadding="4dp"
+                    android:text="ahmed"
+                    app:drawableStartCompat="@drawable/name_icon" />
 
-                    <TextView
-                        style="@style/hintStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Name: " />
 
-                    <TextView
-                        android:id="@+id/author_name_tv"
-                        style="@style/valueStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="ahmed" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/author_username_tv"
+                    style="@style/valueStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_4sdp"
-                    android:orientation="horizontal">
+                    android:drawablePadding="4dp"
+                    android:text="ahmed"
+                    app:drawableStartCompat="@drawable/username_icon" />
 
-                    <TextView
-                        style="@style/hintStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="UserName: " />
 
-                    <TextView
-                        android:id="@+id/author_username_tv"
-                        style="@style/valueStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="ahmed" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/author_email_tv"
+                    style="@style/valueStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_4sdp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        style="@style/hintStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Email: " />
-
-                    <TextView
-                        android:id="@+id/author_email_tv"
-                        style="@style/valueStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="ahmed" />
-                </LinearLayout>
+                    android:drawablePadding="4dp"
+                    android:text="ahmed"
+                    app:drawableStartCompat="@drawable/email_icon" />
 
             </LinearLayout>
 
