--- a/app/src/main/res/layout/posts_item.xml
+++ b/app/src/main/res/layout/posts_item.xml
@@ -15,7 +15,7 @@
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_4sdp"
+        android:layout_margin="@dimen/_4sdp"
         app:cardCornerRadius="@dimen/_4sdp"
         card_view:cardUseCompatPadding="true">
 
@@ -30,65 +30,36 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+
+                <TextView
+                    android:id="@+id/post_title_tv"
+                    style="@style/valueStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_4sdp"
-                    android:orientation="horizontal">
+                    android:drawablePadding="4dp"
+                    android:text="ahmed"
+                    app:drawableStartCompat="@drawable/title_icon" />
 
-                    <TextView
-                        style="@style/hintStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Title: " />
 
-                    <TextView
-                        android:id="@+id/post_title_tv"
-                        style="@style/valueStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="ahmed" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/post_date_tv"
+                    style="@style/valueStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_4sdp"
-                    android:orientation="horizontal">
+                    android:drawablePadding="4dp"
+                    android:text="ahmed"
+                    app:drawableStartCompat="@drawable/date_icon" />
 
-                    <TextView
-                        style="@style/hintStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="UserName: " />
 
-                    <TextView
-                        android:id="@+id/post_date_tv"
-                        style="@style/valueStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="ahmed" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/post_body_tv"
+                    style="@style/valueStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_4sdp"
-                    android:orientation="horizontal">
+                    android:drawablePadding="4dp"
+                    android:text="ahmed"
+                    app:drawableStartCompat="@drawable/body_icon" />
 
-                    <TextView
-                        style="@style/hintStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Email: " />
-
-                    <TextView
-                        android:id="@+id/post_body_tv"
-                        style="@style/valueStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="ahmed" />
-                </LinearLayout>
 
             </LinearLayout>
 
