--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.ClientApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+    <style name="Theme.ClientApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,15 +15,10 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="hintStyle">
-        <item name="android:textSize">@dimen/_10ssp</item>
-        <item name="android:textColor">#808080</item>
-        <item name="fontFamily">sans-serif</item>
-    </style>
-
     <style name="valueStyle">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="android:textColor">#000000</item>
         <item name="fontFamily">sans-serif</item>
+        <item name="android:layout_margin">@dimen/_4sdp</item>
     </style>
 </resources>
